<resources>
    <string name="app_name">O meu CV</string>
    <string name="ask_for_nickname">Introduza, por favor, o seu diminutivo</string>
    <string name="textbox_message">escreva aqui o seu diminutivo</string>
    <string name="curriculum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ultricies eleifend massa, vitae convallis purus venenatis at. Donec sodales nisi ipsum, non aliquam diam dignissim ut. Nunc ullamcorper sagittis risus, cursus dictum velit sagittis at. Curabitur ultricies magna sed commodo ullamcorper. Aenean fermentum purus porta nunc consequat, vitae blandit arcu dignissim. Suspendisse commodo tincidunt euismod. Pellentesque blandit mauris sed enim auctor, sed interdum erat lacinia. Proin rhoncus nibh at tristique posuere. Aliquam elementum, ligula et iaculis porta, eros enim eleifend tortor, non bibendum nulla arcu in urna.
                              \n\n
                              Ut pretium, tortor ac pulvinar tristique, dolor magna aliquam justo, sed pharetra magna elit tempor massa. In tortor nunc, ornare nec rutrum at, tempus ut turpis. Proin velit ex, venenatis quis dui quis, commodo congue nisi. Sed commodo, mauris a rhoncus cursus, purus purus vehicula libero, id sagittis urna quam eget mauris. Pellentesque lectus purus, interdum non lacus sit amet, porttitor tincidunt tortor. Sed volutpat nulla maximus dolor blandit, in tristique quam egestas. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
                              \n\n
                              Curabitur turpis tortor, dictum quis tellus in, vestibulum volutpat lacus. Morbi vitae velit iaculis, maximus arcu id, elementum mi. Morbi euismod rhoncus leo. Fusce et aliquet elit. Cras mauris tortor, posuere eget pretium ut, luctus vitae velit. Integer feugiat cursus dui nec euismod. Phasellus at lobortis ex. Quisque suscipit nisi et leo porttitor consequat.
                              \n\n
                              Interdum et malesuada fames ac ante ipsum primis in faucibus. Mauris tincidunt, turpis in mattis aliquet, tellus magna vulputate risus, vitae ultricies augue purus at purus. Sed a porta augue. Pellentesque tempus et est ut lacinia. Etiam sit amet neque nibh. Sed in urna dapibus, facilisis augue eu, sagittis quam. Cras eget varius erat, nec porta dui. Quisque ac sollicitudin ante, fermentum condimentum risus. Donec vel lacus suscipit, vehicula nunc id, aliquam nibh. </string>
    <string name="button_text">Continuar</string>

</resources>